# clipper

./: Dockerfile
clipper_admin/clipper_admin/: clipper_admin.py
clipper_admin/clipper_admin/deployers/: pytorch.py
containers/python/: rpc.py
dockerfiles/: QueryFrontendDockerfile
selection_policy_testing/: query_processor.py  selection_frontend.py  selection_policy_debug.ipynb
selectionworker/: selection_thread.py
src/: CMakeLists.txt
src/benchmarks/src/: end_to_end_bench.cpp
src/frontends/src/: query_frontend.hpp
src/libclipper/include/clipper/: datatypes.hpp  query_processor.hpp  redis.hpp  task_executor.hpp
src/libclipper/src/: datatypes.cpp  query_processor.cpp  redis.cpp
src/management/src/: management_frontend.hpp
src/selection_policy/src/: rpc_handle.cpp  rpc_handle.h  rpcmodule.c  setup.py
src/selectionpolicy/: CMakeLists.txt
src/selectionpolicy/src/: CMakeCache.txt  Makefile  cmake_install.cmake  rpc_handle.cpp  rpc_handle.hpp  rpc_handle_wrapper.cpp  rpc_handle_wrapper.h  rpcmodule.c  setup.py
